Re-add Force Font DPI spinbox on Wayland

People are using this feature to work around Wayland's terrible
fractional scaling implementation that makes everything super blurry. I
can't in good conscience tell them to use it anyway because it really
does look so bad. :( See https://bugs.kde.org/show_bug.cgi?id=433269.

This reverts commit 65defddee95db6738d5e2c80f6c7b373fde451a1
This reverts commit 40afa58ab9bf0d0808edb891f9cd855316a82411

BUG: 433115
FIXED-IN: 5.21.2


(cherry picked from commit 62842ac6fd5571394e38360b345a7ad3a1187273)